--- a/info/docs.texi
+++ b/info/docs.texi
@@ -4,7 +4,7 @@
 
 @include intro-docs.texi
 
-This chapter documents a total of 1256 commands and 920 options.
+This chapter documents a total of 1256 commands and 921 options.
 
 @menu
 * acss-structure::CSS -- Cascaded Speech Style structure.
@@ -1522,13 +1522,12 @@ SPC		emacspeak-webspace
 :		emacspeak-wizards-view-buffers-filtered-by-m-player-mode
 ;		emacspeak-m-player-using-openal
 B		eww-list-bookmarks
-F		rg-dwim
 a		emacspeak-wizards-term
 b		eww-list-buffers
 c		browse-url-chrome
 d		magit-dispatch
 e		gmaps
-f		rg
+f		find-file
 g		gnus
 h		emacspeak-org-capture-link
 i		yas-insert-snippet
@@ -1596,6 +1595,7 @@ c		emacspeak-wizards-view-buffers-filtered-by-this-mode
 d		sdcv-search-input
 e		eww
 f		emacspeak-wizards-find-file-as-root
+g		rg
 h		emacspeak-muggles-hideshow/body
 i		emacspeak-wizards-iheart
 l		eww-open-file
@@ -10067,6 +10067,25 @@ command that the key sequence executes.
 
 @end defvar
 
+@defvar {User Option} emacspeak-ctl-z-keys
+*Specifies ctl-z  key bindings for the audio desktop. 
+
+Bindings specified here are available on prefix key ‘C-z’ for
+example, if you bind ‘zb’ to command ‘suspend-frame ’ then that command
+will be available on key ‘C-z z’.
+
+KEYS should be a string constant in the format used for saving
+keyboard macros (see ‘edmacro-mode’).
+
+Command is an interactive command or a prefix-command that can be
+bound to a key. 
+
+The value of this variable is an association list. The car of
+each element specifies a key sequence. The cdr specifies an
+interactive command that the key sequence executes.
+
+@end defvar
+
 @defvar {User Option} emacspeak-hyper-keys
 *Specifies hyper key bindings for the audio desktop. Emacs can
 use the ‘hyper’ key as a modifier key. You can turn the ‘windows’
@@ -14639,15 +14658,16 @@ Desktop.
 
 Emacspeak implements command emacspeak-pianobar, a light-weight
 wrapper on top of pianobar. Emacspeak binds this command to
-@code{C-e '}. In my personal @code{.emacs}, I bind this to
-@code{f5}. Command emacspeak-pianobar is designed to let you
+@code{C-e '}.
+ Command emacspeak-pianobar is designed to let you
 launch Pandora channels and switch tracks/channels without moving
 away from your primary tasks such as editting code or
 reading/composing email. Toward this end, launching command
 emacspeak-pianobar the first time initializes the
 @code{*pianobar*} buffer and launches command @code{pianobar};
-Focus is placed in the @code{*pianobar*} buffer. Pianobar can be
-controlled with single keystrokes while in this buffer. The most
+but focus  remains   in your current buffer. Pianobar can be
+controlled with single keystrokes while in  the pianobar  buffer
+--- switch to   using @code{C-e ''}. The most
 useful keys are @code{right} for skipping tracks, @code{up} and
 @code{down} for switching channels etc.; see the keys bound in
 @code{pianobar-key-map} for a complete list. Pressing @code{C-e '}
