--- a/info/docs.texi
+++ b/info/docs.texi
@@ -274,7 +274,8 @@ change effects by examining the value of text-property
 
 Think of a buffer of formatted text along with the text-property
 'personality appropriately set as a "aural display list".
-Applications like EWW that produce such formatted buffers  call function
+Module voice-setup.el  help applications like EWW
+ produce audio-formatted output by calling  function
 acss-personality-from-speech-style  with a  "speech-style"
 --a structure as defined in this module and get back a symbol that
 they then assign to the value of property 'personality.
@@ -287,9 +288,10 @@ specific speech style.
 (2) Examines emacspeak's internal voice table to see if this
 speech style has a voice already defined.
 If so it returns immediately.
-Otherwise, it does the additional work of defining a dectalk-voice for
+Otherwise, it does the additional work of defining a -voice for
 future use.
-See module dectalk-voices.el to see how voices are defined.
+See module voice-setup.el  to see how voices are defined
+independent of a given TTS engine.
 
 @node amixer
 @section amixer
