--- a/info/.spell.tex
+++ b/info/.spell.tex
@@ -89,7 +89,6 @@ charsets
 Chassell
 checkdoc
 cheque
-ChromeVox
 ciel
 CIEL
 citeseer
@@ -107,6 +106,7 @@ cp
 cperl
 CPerl
 csv
+ctl
 ctlx
 cueing
 customizable
@@ -151,8 +151,6 @@ DOM
 dont
 Dorman
 dt
-DTD
-DTDs
 dtk
 Dtk
 dvi
@@ -237,7 +235,6 @@ eww
 Eww
 EWW
 EWW's
-facemenu
 facevoice
 fastload
 fg
@@ -260,8 +257,6 @@ foldoc
 FreeSound
 frontends
 Frontpage
-ftf
-FTF
 fulltext
 func
 GAFA
@@ -338,8 +333,6 @@ JDEE
 js
 JS
 jsdoc
-jss
-JSS
 kbd
 kcbsFM
 keymap
@@ -483,7 +476,6 @@ Proced
 PROCED
 prolog
 pronouncer
-proto
 prototyped
 pulseaudio
 punctuations
@@ -607,7 +599,6 @@ tbm
 tcl
 TCL
 TCP
-tdtd
 tetris
 Tetris
 texi
@@ -696,10 +687,8 @@ wdired
 wearables
 webedit
 webjump
-webkit
 websearch
 Websearch
-websocket
 webspace
 Webspace
 WEBSPACE
@@ -756,4 +745,5 @@ yyyy
 yyyymmdd
 zam
 Zandt
+zb
 zoneinfo
