--- a/info/docs.texi
+++ b/info/docs.texi
@@ -4,7 +4,7 @@
 
 @include intro-docs.texi
 
-This chapter documents a total of 1257 commands and 921 options.
+This chapter documents a total of 1257 commands and 922 options.
 
 @menu
 * acss-structure::CSS -- Cascaded Speech Style structure.
@@ -202,7 +202,6 @@ This chapter documents a total of 1257 commands and 921 options.
 * emacspeak-tapestry::Speak information about current layout of windows.
 * emacspeak-tar::Speech enable Tar Mode -- Manipulate tar archives from Emacs.
 * emacspeak-tcl::Speech enable TCL development environment.
-* emacspeak-tdtd::Speech enable  DTD authoring.
 * emacspeak-tempo::Speech enable tempo -- template library used for Java and HTML authoring.
 * emacspeak-tetris::Speech enable game of Tetris.
 * emacspeak-texinfo::Speech enable texinfo mode.
@@ -4030,6 +4029,12 @@ This personality uses  voice-brighten whose  effect can be changed globally by c
 @defvar {User Option} voice-custom-variable-button
 Personality used for custom-variable-button
 This personality uses  voice-animate whose  effect can be changed globally by customizing voice-animate-settings.
+
+@end defvar
+
+@defvar {User Option} voice-custom-variable-obsolete
+Personality used for custom-variable-obsolete
+This personality uses  voice-smoothen-extra whose  effect can be changed globally by customizing voice-smoothen-extra-settings.
 
 @end defvar
 
@@ -19296,14 +19301,6 @@ Speak size of file current entry
 @section emacspeak-tcl
 
 Provide additional advice to tcl-mode
-
-@node emacspeak-tdtd
-@section emacspeak-tdtd
-
-tdtd is an emacs package for authoring and maintaining
-XML and SGML DTDs
-tdtd is at http://www.mulberrytech.com/tdtd/index.html
-this module speech-enables tdtd
 
 @node emacspeak-tempo
 @section emacspeak-tempo
