--- a/info/docs.texi
+++ b/info/docs.texi
@@ -4,7 +4,7 @@
 
 @include intro-docs.texi
 
-This chapter documents a total of 1257 commands and 922 options.
+This chapter documents a total of 1255 commands and 923 options.
 
 @menu
 * acss-structure::CSS -- Cascaded Speech Style structure.
@@ -1199,420 +1199,6 @@ Emacspeak modules as each package is loaded.
 It implements function emacspeak which loads the rest of the system.
 
 @subsection Emacspeak Commands
-
-@subsubsection emacspeak
-@deffn {Command} emacspeak   
-@findex emacspeak
-
-@format
-Start the Emacspeak Audio Desktop.
-Use Emacs as you normally would,
-emacspeak will provide you spoken feedback as you work.  Emacspeak also
-provides commands for having parts of the current buffer, the
-mode-line etc to be spoken.
-
-If you are hearing this description as a result of pressing
-C-h C-e you may want to press use the
-arrow keys to move around in the Help buffer to read the rest of
-this description, which includes a summary of all emacspeak
-keybindings.
-
-All emacspeak commands use C-e as a prefix
-key.  You can also set the state of the TTS engine by using
-C-e d as a prefix.  Here is a summary of all
-emacspeak commands along with their bindings.  You need to precede the
-keystrokes listed below with C-e.
-
-Emacspeak also provides a fluent speech extension to the Emacs
-terminal emulator (eterm).  Note: You need to use the term package that
-comes with emacs-19.29 and later.
-
-key             binding
----             -------
-
-C-@@		emacspeak-speak-current-mark
-C-a		emacspeak-toggle-auditory-icons
-C-b		emacspeak-bookshare
-C-c		emacspeak-clipboard-copy
-C-d		emacspeak-toggle-show-point
-C-e		end-of-line
-TAB		emacspeak-open-info
-C-j		emacspeak-hide-speak-block-sans-prefix
-C-l		emacspeak-speak-line-number
-RET		emacspeak-speak-continuously
-C-n		emacspeak-speak-next-window
-C-o		emacspeak-ocr
-C-p		emacspeak-speak-previous-window
-C-q		emacspeak-toggle-inaudible-or-comint-autospeak
-C-s		tts-restart
-C-t		emacspeak-table-submap-command
-C-u		emacspeak-feeds-browse
-C-v		view-mode
-C-w		emacspeak-speak-window-information
-C-x		emacspeak-personal-ctlx-keymap
-C-y		emacspeak-clipboard-paste
-ESC		Prefix Command
-SPC		emacspeak-speak-header-line
-!		emacspeak-speak-run-shell-command
-"		emacspeak-speak-sexp
-#		emacspeak-gridtext
-$		emacspeak-shell-command
-%		emacspeak-speak-current-percentage
-&		emacspeak-wizards-shell-command-on-current-file
-'		emacspeak-pianobar
-(		emacspeak-audio-setup
-)		emacspeak-sounds-select-theme
-,		emacspeak-speak-skim-buffer
-.		dtk-notify-stop
-/		emacspeak-speak-this-buffer-other-window-display
-0 .. 9		emacspeak-speak-predefined-window
-:		emacspeak-m-player-shuffle
-;		emacspeak-multimedia
-<		emacspeak-speak-previous-field
-=		emacspeak-speak-current-column
->		emacspeak-speak-next-field
-?		emacspeak-websearch-dispatch
-@@		emacspeak-speak-message-at-time
-A		emacspeak-appt-repeat-announcement
-B		emacspeak-speak-buffer-interactively
-C		emacspeak-customize
-I		emacspeak-speak-show-active-network-interfaces
-L		emacspeak-speak-line-interactively
-M		emacspeak-speak-minor-mode-line
-N		emacspeak-view-emacspeak-news
-P		emacspeak-speak-paragraph-interactively
-R		emacspeak-speak-rectangle
-T		emacspeak-view-emacspeak-tips
-V		emacspeak-speak-version
-W		emacspeak-tapestry-select-window-by-name
-[		emacspeak-speak-page
-\		emacspeak-toggle-speak-line-invert-filter
-]		emacspeak-speak-page-interactively
-^		emacspeak-filtertext
-a		emacspeak-speak-message-again
-b		emacspeak-speak-buffer
-c		emacspeak-speak-char
-d		emacspeak-dtk-submap-command
-e		end-of-line
-f		emacspeak-speak-buffer-filename
-g		emacspeak-epub
-h		emacspeak-speak-help
-i		emacspeak-tabulate-region
-j		emacspeak-hide-or-expose-block
-k		emacspeak-speak-current-kill
-l		emacspeak-speak-line
-m		emacspeak-speak-mode-line
-n		emacspeak-speak-rest-of-buffer
-o		emacspeak-toggle-comint-output-monitor
-p		emacspeak-speak-paragraph
-q		emacspeak-toggle-speak-messages
-r		emacspeak-speak-region
-s		dtk-stop
-t		emacspeak-speak-time
-u		emacspeak-url-template-fetch
-v		view-register
-w		emacspeak-speak-word
-x		emacspeak-personal-keymap
-@{		emacspeak-speak-paragraph
-|		emacspeak-speak-line-set-column-filter
-DEL		cd-tool
-C-SPC		emacspeak-speak-current-mark
-<C-left>	emacspeak-select-this-buffer-previous-display
-<C-right>	emacspeak-select-this-buffer-next-display
-<delete>	emacspeak-ssh-tts-restart
-<down>		emacspeak-read-next-line
-<f1>		emacspeak-learn-emacs-mode
-<f11>		emacspeak-wizards-shell-toggle
-<insert>	emacspeak-emergency-tts-restart
-<left>		emacspeak-speak-this-buffer-previous-display
-<right>		emacspeak-speak-this-buffer-next-display
-<up>		emacspeak-read-previous-line
-<(deletechar>	emacspeak-ssh-tts-restart
-
-x SPC		emacspeak-jabber-speak-recent-message
-x ,		emacspeak-wizards-shell-directory-set
-x .		emacspeak-wizards-shell-directory-reset
-x 0 .. x 9	emacspeak-wizards-shell-by-key
-x =		emacspeak-wizards-find-longest-line-in-region
-x C		emacspeak-wizards-colors
-x a		emacspeak-wizards-alpha-vantage-quotes
-x b		battery
-x c		emacspeak-wizards-color-wheel
-x d		deadgrep
-x e		emacspeak-we-xsl-map
-x h		emacspeak-wizards-how-many-matches
-x i		ibuffer
-x j		emacspeak-jabber-popup-roster
-x m		mspools-show
-x o		emacspeak-wizards-occur-header-lines
-x p		paradox-list-packages
-x q		emacspeak-wizards-quote
-x r		jabber-activity-switch-to
-x s		emacspeak-emergency-tts-restart
-x t		emacspeak-speak-telephone-directory
-x u		emacspeak-wizards-units
-x v		emacspeak-wizards-vc-viewer
-x w		emacspeak-wizards-noaa-weather
-x y		ytel
-x |		emacspeak-wizards-squeeze-blanks
-x DEL		desktop-clear
-
-# a		emacspeak-gridtext-apply
-# l		emacspeak-gridtext-load
-# s		emacspeak-gridtext-save
-
-C-M-@@		emacspeak-speak-spaces-at-point
-C-M-b		emacspeak-submit-bug
-C-M-k		kill-emacs
-C-M-l		emacspeak-speak-overlay-properties
-M-%		emacspeak-goto-percent
-M-;		emacspeak-webutils-play-media-at-point
-M-a		emacspeak-set-auditory-icon-player
-M-b		emacspeak-speak-other-buffer
-M-c		emacspeak-copy-current-file
-M-d		emacspeak-pronounce-dispatch
-M-f		emacspeak-frame-label-or-switch-to-labelled-frame
-M-h		emacspeak-speak-hostname
-M-i		emacspeak-table-display-table-in-region
-M-l		emacspeak-link-current-file
-M-m		emacspeak-toggle-mail-alert
-M-p		emacspeak-show-property-at-point
-M-q		voice-setup-toggle-silence-personality
-M-r		emacspeak-remote-connect-to-server
-M-s		emacspeak-symlink-current-file
-M-t		emacspeak-tapestry-describe-tapestry
-M-u		emacspeak-feeds-add-feed
-M-v		emacspeak-show-style-at-point
-M-w		emacspeak-speak-which-function
-M-x		emacspeak-wizards-execute-emacspeak-command
-C-M-SPC		emacspeak-speak-spaces-at-point
-
-C-t C-b		emacspeak-table-previous-column
-C-t C-f		emacspeak-table-next-column
-C-t TAB		emacspeak-table-next-column
-C-t C-n		emacspeak-table-next-row
-C-t C-p		emacspeak-table-previous-row
-C-t ESC		Prefix Command
-C-t SPC		emacspeak-table-speak-current-element
-C-t #		emacspeak-table-sort-on-current-column
-C-t ,		emacspeak-table-find-csv-file
-C-t .		emacspeak-table-speak-coordinates
-C-t <		emacspeak-table-goto-left
-C-t =		emacspeak-table-speak-dimensions
-C-t >		emacspeak-table-goto-right
-C-t A		emacspeak-table-goto-left
-C-t B		emacspeak-table-goto-bottom
-C-t C		emacspeak-table-search-column
-C-t E		emacspeak-table-goto-right
-C-t Q		emacspeak-kill-buffer-quietly
-C-t R		emacspeak-table-search-row
-C-t T		emacspeak-table-goto-top
-C-t a		emacspeak-table-select-automatic-speaking-method
-C-t b		emacspeak-table-speak-both-headers-and-element
-C-t c		emacspeak-table-speak-column-header-and-element
-C-t f		emacspeak-table-speak-row-filtered
-C-t g		emacspeak-table-speak-column-filtered
-C-t h		emacspeak-table-search-headers
-C-t j		emacspeak-table-goto
-C-t k		emacspeak-table-copy-to-clipboard
-C-t n		emacspeak-table-next-row
-C-t p		emacspeak-table-previous-row
-C-t q		quit-window
-C-t r		emacspeak-table-speak-row-header-and-element
-C-t s		emacspeak-table-search
-C-t v		emacspeak-table-view-csv-buffer
-C-t w		emacspeak-table-copy-current-element-to-kill-ring
-C-t x		emacspeak-table-copy-current-element-to-register
-C-t <S-tab>	emacspeak-table-previous-column
-C-t <down>	emacspeak-table-next-row
-C-t <left>	emacspeak-table-previous-column
-C-t <right>	emacspeak-table-next-column
-C-t <up>	emacspeak-table-previous-row
-
-d C-c		dtk-cloud
-d C-d		dectalk
-d C-e		espeak
-d RET		dtk-set-chunk-separator-syntax
-d C-n		dtk-notify-initialize
-d C-o		outloud
-d C-s		dtk-notify-shutdown
-d C-v		global-voice-lock-mode
-d SPC		dtk-toggle-splitting-on-white-space
-d ,		dtk-toggle-punctuation-mode
-d 0 .. d 9	dtk-set-predefined-speech-rate
-d C		dtk-toggle-allcaps-beep
-d L		dtk-local-server
-d N		dtk-set-next-language
-d P		dtk-set-previous-language
-d R		dtk-reset-state
-d S		dtk-set-language
-d V		tts-speak-version
-d a		dtk-add-cleanup-pattern
-d c		dtk-toggle-capitalization
-d d		dtk-select-server
-d f		dtk-set-character-scale
-d i		emacspeak-toggle-audio-indentation
-d k		emacspeak-toggle-character-echo
-d l		emacspeak-toggle-line-echo
-d m		emacspeak-speak-set-mode-punctuations
-d n		dtk-toggle-speak-nonprinting-chars
-d o		dtk-toggle-strip-octals
-d p		dtk-set-punctuations
-d r		dtk-set-rate
-d s		dtk-toggle-split-caps
-d v		voice-lock-mode
-d w		emacspeak-toggle-word-echo
-d z		emacspeak-zap-tts
-
-x e C-c		emacspeak-we-junk-by-class-list
-x e C-f		emacspeak-we-count-matches
-x e C-p		emacspeak-we-xpath-junk-and-follow
-x e C-t		emacspeak-we-count-tables
-x e C-x		emacspeak-we-count-nested-tables
-x e C		emacspeak-we-extract-by-class-list
-x e D		emacspeak-we-junk-by-class-list
-x e I		emacspeak-we-extract-by-id-list
-x e M		emacspeak-we-extract-tables-by-match-list
-x e P		emacspeak-we-follow-and-extract-main
-x e S		emacspeak-we-style-filter
-x e T		emacspeak-we-extract-tables-by-position-list
-x e X		emacspeak-we-extract-nested-table-list
-x e a		emacspeak-we-xslt-apply
-x e b		emacspeak-we-follow-and-filter-by-id
-x e c		emacspeak-we-extract-by-class
-x e d		emacspeak-we-junk-by-class
-x e e		emacspeak-we-url-expand-and-execute
-x e f		emacspeak-we-xslt-filter
-x e i		emacspeak-we-extract-by-id
-x e j		emacspeak-we-xslt-junk
-x e k		emacspeak-we-toggle-xsl-keep-result
-x e m		emacspeak-we-extract-table-by-match
-x e o		emacspeak-we-xsl-toggle
-x e p		emacspeak-we-xpath-filter-and-follow
-x e r		emacspeak-we-extract-by-role
-x e s		emacspeak-we-xslt-select
-x e t		emacspeak-we-extract-table-by-position
-x e u		emacspeak-we-extract-matching-urls
-x e v		emacspeak-we-class-filter-and-follow-link
-x e x		emacspeak-we-extract-nested-table
-x e y		emacspeak-we-class-filter-and-follow
-x e z		emacspeak-we-extract-speakable
-
-C-t M-<		emacspeak-table-goto-top
-C-t M->		emacspeak-table-goto-bottom
-C-t M-l		emacspeak-table-ui-filter-load
-C-t M-s		emacspeak-table-ui-filter-save
-
-Emacspeak provides a set of additional keymaps to give easy access to
-its extensive facilities.
-
-Press C-; to access keybindings in emacspeak-hyper-keymap:
-key             binding
----             -------
-
-C-e		eshell
-TAB		hippie-expand
-C-r		flx-isearch-backward
-C-s		flx-isearch-forward
-C-u		emacspeak-feeds-browse
-'		emacspeak-m-player-using-hrtf
-,		switch-to-prev-buffer
-.		switch-to-next-buffer
-:		emacspeak-wizards-view-buffers-filtered-by-m-player-mode
-;		emacspeak-m-player-using-openal
-B		eww-list-bookmarks
-a		emacspeak-wizards-term
-b		eww-list-buffers
-c		browse-url-chrome
-d		magit-dispatch
-e		gmaps
-f		find-file
-g		gnus
-h		emacspeak-org-capture-link
-i		yas-insert-snippet
-j		emacspeak-wizards-shell-toggle
-k		emacspeak-webspace-knowledge-search
-l		emacspeak-librivox
-m		vm
-o		helm-mini
-p		emacspeak-wizards-pdf-open
-s		emacspeak-wizards-shell
-t		twit
-u		list-unicode-display
-v		emacspeak-muggles-vuiet/body
-w		emacspeak-wizards-noaa-weather
-y		yas-expand
-
-.
-
-Press C-’ or C-.  to access keybindings in emacspeak-super-keymap:
-key             binding
----             -------
-
-C-n		emacspeak-wizards-google-headlines
-SPC		emacspeak-wizards-scratch
-'		emacspeak-vlc
-.		emacspeak-wizards-shell-directory-reset
-R		emacspeak-webspace-feed-reader
-S		soundscape-stop
-a		emacspeak-wizards-execute-asynchronously
-c		calculator
-d		emacspeak-dired-downloads
-e		elfeed
-f		flyspell-mode
-g		emacspeak-google-tts-region
-h		emacspeak-m-player-from-media-history
-j		ido-imenu-anywhere
-l		emacspeak-m-player-locate-media
-m		emacspeak-wizards-view-buffers-filtered-by-this-mode
-n		emacspeak-wizards-google-news
-o		emacspeak-muggles-outliner/body
-p		proced
-q		emacspeak-wizards-iex-show-quote
-r		soundscape-restart
-s		soundscape
-t		soundscape-toggle
-u		soundscape-update-mood
-v		emacspeak-muggles-view/body
-w		define-word
-
-.
-
-Press C-, to access keybindings in emacspeak-alt-keymap:
-key             binding
----             -------
-
-SPC		emacspeak-eww-smart-tabs
-,		emacspeak-eldoc-speak-doc
-/		emacspeak-origami/body
-a		emacspeak-feeds-atom-display
-b		sox-binaural
-c		emacspeak-wizards-view-buffers-filtered-by-this-mode
-d		sdcv-search-input
-e		eww
-f		emacspeak-wizards-find-file-as-root
-g		rg
-h		emacspeak-muggles-hideshow/body
-i		emacspeak-wizards-iheart
-l		eww-open-file
-m		magit-status
-n		emacspeak-wizards-cycle-to-next-buffer
-o		emacspeak-feeds-opml-display
-p		emacspeak-wizards-cycle-to-previous-buffer
-q		emacspeak-wizards-iex-show-price
-r		emacspeak-feeds-rss-display
-s		emacspeak-wizards-tune-in-radio-search
-t		emacspeak-wizards-tune-in-radio-browse
-u		emacspeak-m-player-url
-v		visual-line-mode
-y		emacspeak-m-player-youtube-player
-
-.
-
-See the online documentation C-e TAB for individual
-commands and options for details.
-@end format
-@end deffn
 
 @subsubsection emacspeak-describe-emacspeak
 @deffn {Command} emacspeak-describe-emacspeak   
@@ -15016,7 +14602,8 @@ specified pronunciation dictionary key.
 
 @format
 Load pronunciation dictionaries.
-Optional argument FILENAME specifies the dictionary file.
+Optional argument FILENAME specifies the dictionary file,
+Default is emacspeak-pronounce-dictionaries-file.
 
 (fn &optional FILENAME)
 @end format
@@ -16950,12 +16537,8 @@ any other key to speak entire page.
 @subsubsection emacspeak-speak-paragraph
 @deffn {Command} emacspeak-speak-paragraph  (&optional arg)
 @table @kbd
-@item C-e @{
-@kindex C-e @{
 @item C-e p
 @kindex C-e p
-@item <fn> @{
-@kindex <fn> @{
 @item <fn> p
 @kindex <fn> p
 @end table
@@ -17742,17 +17325,6 @@ Toggle the state of whether emacspeak echoes messages.
 Toggle state of  Emacspeak  word echo.
 Interactive PREFIX arg means toggle  the global default value, and then set the
 current local  value to the result.
-@end format
-@end deffn
-
-@subsubsection emacspeak-use-customized-blink-paren
-@deffn {Command} emacspeak-use-customized-blink-paren   
-@findex emacspeak-use-customized-blink-paren
-
-@format
-A customized blink-paren to speak  matching opening paren.
-We need to call this in case Emacs is anal and loads its own
-builtin blink-paren function which does not talk.
 @end format
 @end deffn
 
@@ -26107,6 +25679,13 @@ Add medium lightness to  current voice.
 
 @defvar {User Option} voice-lighten-settings
 Lighten current voice.
+
+@end defvar
+
+@defvar {User Option} voice-lock-mode-hook
+Hook run after entering or leaving ‘voice-lock-mode’.
+No problems result if this variable is not bound.
+‘add-hook’ automatically binds it.  (This is true for all hook variables.)
 
 @end defvar
 
