--- a/info/docs.texi
+++ b/info/docs.texi
@@ -12495,7 +12495,6 @@ shown in the hydra package documentation.
 @item hideshow: C-, h Provide HideShow bindings.
 @item toggle-option:  @kbd{C-c o} Single binding for toggling options.
 @item Repeatable-Yank: @kbd{C-y} Smart yank
-@item SmartParens: @kbd{C-c ,} Smart Parens
 @item Vuiet Explorer: @kbd{C-; v} Vuiet Music Explorer and Player
 @item undo-only/undo-redo: @kbd{C-/ } Undo-only on @kbd{/} and
 undo-redo on @kbd{\}
@@ -12560,6 +12559,7 @@ The heads for the associated hydra are:
 "s":    ‘hs-show-block’,
 "H":    ‘hs-hide-all’,
 "S":    ‘hs-show-all’,
+"a":    ‘hs-show-all’,
 "l":    ‘hs-hide-level’,
 "i":    ‘hs-hide-initial-comment-block’
 
@@ -12666,8 +12666,8 @@ The heads for the associated hydra are:
 "SPC":    ‘emacspeak-outline-speak-this-heading’,
 "n":    ‘emacspeak-outline-speak-next-heading’,
 "p":    ‘emacspeak-outline-speak-previous-heading’,
-"N":    ‘org-forward-heading-same-level’,
-"P":    ‘org-backward-heading-same-level’,
+"f":    ‘org-forward-heading-same-level’,
+"b":    ‘org-backward-heading-same-level’,
 "u":    ‘outline-up-heading’,
 "g":    ‘org-goto’
 
@@ -12696,53 +12696,6 @@ The heads for the associated hydra are:
 "c":    ‘emacspeak-org-table-speak-column-header-and-element’
 
 The body can be accessed via ‘emacspeak-muggles-org-table/body’.
-@end format
-@end deffn
-
-@subsubsection emacspeak-muggles-smartparens/body
-@deffn {Command} emacspeak-muggles-smartparens/body   
-@table @kbd
-@item C-c ,
-@kindex C-c ,
-@end table
-
-@findex emacspeak-muggles-smartparens/body
-
-@format
-Call the body in the "emacspeak-muggles-smartparens" hydra.
-
-The heads for the associated hydra are:
-
-"’":    ‘(lambda (_) (interactive "P") (sp-wrap-with-pair "’"))’,
-"(":    ‘(lambda (_) (interactive "P") (sp-wrap-with-pair "("))’,
-"<down>":    ‘sp-splice-sexp-killing-forward’,
-"<left>":    ‘sp-forward-barf-sexp’,
-"<right>":    ‘sp-forward-slurp-sexp’,
-"<up>":    ‘sp-splice-sexp-killing-backward’,
-"?":    ‘(emacspeak-hydra-self-help "emacspeak-muggles-smartparens")’,
-"C-<left>":    ‘sp-backward-barf-sexp’,
-"C-<right>":    ‘sp-backward-slurp-sexp’,
-"R":    ‘sp-splice-sexp’,
-""":    ‘(lambda (_) (interactive "P") (sp-wrap-with-pair "\""))’,
-"a":    ‘beginning-of-defun’,
-"b":    ‘sp-backward-sexp’,
-"c":    ‘sp-convolute-sexp’,
-"d":    ‘sp-down-sexp’,
-"e":    ‘end-of-defun’,
-"f":    ‘sp-forward-sexp’,
-"i":    ‘sp-indent-defun’,
-"j":    ‘sp-join-sexp’,
-"k":    ‘sp-kill-sexp’,
-"n":    ‘sp-next-sexp’,
-"p":    ‘sp-previous-sexp’,
-"r":    ‘sp-splice-sexp-killing-around’,
-"s":    ‘sp-split-sexp’,
-"t":    ‘sp-transpose-sexp’,
-"u":    ‘sp-backward-up-sexp’,
-"w":    ‘sp-copy-sexp’,
-"@{":    ‘(lambda (_) (interactive "P") (sp-wrap-with-pair "@{"))’
-
-The body can be accessed via ‘emacspeak-muggles-smartparens/body’.
 @end format
 @end deffn
 
@@ -23558,6 +23511,7 @@ shown in the hydra package documentation.
 @subsection Extra Muggles
 
 @itemize
+@item SmartParens: @kbd{C-c ,} Smart Parens
 @item m-player: @kbd{s-m} Emacspeak-M-Player Commands
 @item m-player: @kbd{s-;} Emacspeak-M-Player muggle
 @item pianobar: @kbd{s-'} Emacspeak-M-pianobar Commands
@@ -23767,6 +23721,53 @@ The body can be accessed via ‘emacspeak-muggles-outliner/body’.
 
 @format
 Temporarily use keymap pianobar-key-map
+@end format
+@end deffn
+
+@subsubsection emacspeak-muggles-smartparens/body
+@deffn {Command} emacspeak-muggles-smartparens/body   
+@table @kbd
+@item C-c ,
+@kindex C-c ,
+@end table
+
+@findex emacspeak-muggles-smartparens/body
+
+@format
+Call the body in the "emacspeak-muggles-smartparens" hydra.
+
+The heads for the associated hydra are:
+
+"’":    ‘(lambda (_) (interactive "P") (sp-wrap-with-pair "’"))’,
+"(":    ‘(lambda (_) (interactive "P") (sp-wrap-with-pair "("))’,
+"<down>":    ‘sp-splice-sexp-killing-forward’,
+"<left>":    ‘sp-forward-barf-sexp’,
+"<right>":    ‘sp-forward-slurp-sexp’,
+"<up>":    ‘sp-splice-sexp-killing-backward’,
+"?":    ‘(emacspeak-hydra-self-help "emacspeak-muggles-smartparens")’,
+"C-<left>":    ‘sp-backward-barf-sexp’,
+"C-<right>":    ‘sp-backward-slurp-sexp’,
+"R":    ‘sp-splice-sexp’,
+""":    ‘(lambda (_) (interactive "P") (sp-wrap-with-pair "\""))’,
+"a":    ‘beginning-of-defun’,
+"b":    ‘sp-backward-sexp’,
+"c":    ‘sp-convolute-sexp’,
+"d":    ‘sp-down-sexp’,
+"e":    ‘end-of-defun’,
+"f":    ‘sp-forward-sexp’,
+"i":    ‘sp-indent-defun’,
+"j":    ‘sp-join-sexp’,
+"k":    ‘sp-kill-sexp’,
+"n":    ‘sp-next-sexp’,
+"p":    ‘sp-previous-sexp’,
+"r":    ‘sp-splice-sexp-killing-around’,
+"s":    ‘sp-split-sexp’,
+"t":    ‘sp-transpose-sexp’,
+"u":    ‘sp-backward-up-sexp’,
+"w":    ‘sp-copy-sexp’,
+"@{":    ‘(lambda (_) (interactive "P") (sp-wrap-with-pair "@{"))’
+
+The body can be accessed via ‘emacspeak-muggles-smartparens/body’.
 @end format
 @end deffn
 
